--- a/11_Stylowanie_tekstu/01_Zadania/css/data.css
+++ b/11_Stylowanie_tekstu/01_Zadania/css/data.css
@@ -15,6 +15,10 @@ body {
     top:0;
 }
 .container {
+    font-family: serif;
+    font-size: 20px;
+    line-height: 2em;
+    color: #555;
     max-width:50%;
     padding: 5rem;
     box-sizing: border-box;
