--- a/13_Border-radius_i_box_shadow/01_Zadania/css/style.css
+++ b/13_Border-radius_i_box_shadow/01_Zadania/css/style.css
@@ -27,6 +27,8 @@ body {
     text-align: center;
     background: #fff;
     padding: 40px;
+    box-shadow: 0 1px 15px rgba(0,0,0,0.1);
+    border-radius: 3px;
 }
 .user-avatar {
     margin: 0 0 20px;
