--- a/13_Border-radius_i_box_shadow/01_Zadania/css/style.css
+++ b/13_Border-radius_i_box_shadow/01_Zadania/css/style.css
@@ -34,6 +34,7 @@ body {
     margin: 0 0 20px;
     max-width: 250px;
     height: auto;
+    border-radius: 50%;
 }
 .user-name {
     font-size:20px;
@@ -46,4 +47,11 @@ body {
     line-height: 1.5em;
 }
 .user-btn {
+    background-color: #4950F6;
+    color: #fff; 
+    box-shadow: 0 2px 10px rgba(73,80,246, 0.4);
+    text-decoration: none;
+    display: inline-block; 
+    padding: 20px 40px;
+    border-radius: 40px;
 }
