--- a/15_Stylowanie_tabel/01_Zadania/css/style.css
+++ b/15_Stylowanie_tabel/01_Zadania/css/style.css
@@ -5,5 +5,14 @@ body {
 
 /* tutaj stylowanie */
 .tab {
-    
+    border-collapse: collapse;
+    }
+th {
+    border: 1px solid #aaa;
+    background-color: gold;
+    padding: 20px;
+}
+td {
+    border: 1px solid #aaa;
+    padding: 20px;
 }
